fix: dark mode slider blend

--- a/app/globals.css
+++ b/app/globals.css
@@ -37,7 +37,7 @@
   }
 
   .dark {
-    --background: 0 0% 7%;
+    --background:  249 11% 12%;
     --background-hover: 0 0% 13%;
     --foreground: 0 0% 98%;
     --card: 240 10% 3.9%;
